syntax = "proto3";

option go_package = "github.com/pipego/runner/server";

package runner;

// The service definition.
service ServerProto {
  rpc SendServer (stream ServerRequest) returns (stream ServerReply) {}
}

// The request message.
message ServerRequest {
  string apiVersion = 1;
  string kind = 2;
  Metadata metadata = 3;
  Spec spec = 4;
}

message Metadata {
  string name = 1;
}

message Spec {
  Task task = 1;
}

message Task {
  string name = 1;
  File file = 2;
  repeated string commands = 3;
  int64 livelog = 4;
}

message File {
  bytes content = 1;
  bool gzip = 2;
}

// The response message.
message ServerReply {
  Output output = 1;
  string error = 2;
}

message Output {
  int64 pos = 1;
  int64 time = 2;
  string message = 3;
}
